--- a/program/hla/win32_hello.htm
+++ b/program/hla/win32_hello.htm
@@ -51,6 +51,8 @@
 參考資訊：<br>
 1. <a href="https://www.plantation-productions.com/Webster/Win32Asm/win32API.html">win32api</a><br><br>
 
+經典的<b>Hello, world!</b>程式框架總是能夠讓人細心品味一款程式語言的美好，司徒就使用一個簡單的Message對話盒來展現<b>Hello, world!</b>框架<br><br>
+
 main.hla
 </p>
 <pre class="brush:asm">
@@ -59,13 +61,15 @@ program main;
 #include("w.hhf")
 
 begin main;
-
     w.MessageBox(0, "Hello, world!", "main", w.MB_OK);
-
 end main;
-</pre><br>
-
+</pre>
 <p>
+<b>Line 1</b>：程式名稱，program、begin、end的名稱都必須一致，HLA語言其實是跟Pascal語言很相似的<br>
+<b>Line 3</b>：Header檔案<br>
+<b>Line 5~7</b>：主程式部份<br>
+<b>Line 6</b>：顯示Message對話盒<br><br>
+
 Makefile
 </p>
 <pre>
