--- a/program.htm
+++ b/program.htm
@@ -424,7 +424,7 @@ High Level Assembly (HLA)</h3>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/hla/win32_dlg_window.htm">
-            Window</a><br>
+            Create Window</a><br>
 
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
