--- a/program/hla/win32_dlg_window.htm
+++ b/program/hla/win32_dlg_window.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Win32 API &gt;&gt; Dialog</h3>
-<p><b>Window</b></p>
+<p><b>Create Window</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
