--- a/program.htm
+++ b/program.htm
@@ -409,7 +409,7 @@ High Level Assembly (HLA)</h3>
     hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Win32 API<br>
+    Win32 API (Original Style)<br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/hla/win32_setup.htm">
