--- a/program/hla/win32_setup.htm
+++ b/program/hla/win32_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Win32 API</h3>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Win32 API (Original Style)</h3>
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
