HLA How to handle window event.

--- a/program.htm
+++ b/program.htm
@@ -426,6 +426,10 @@ High Level Assembly (HLA)</h3>
             <a href="program/hla/win32_dlg_window.htm">
             Create Window</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/hla/win32_dlg_event.htm">
+            Handle Event</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
