--- a/program/hla/win32_dlg_event.htm
+++ b/program/hla/win32_dlg_event.htm
@@ -120,6 +120,7 @@ begin main;
 end main;
 </pre>
 <p>
+<b>Line 17</b>：Pascal預設的Calling Convention並不是stdcall，因此，如果不使用@stdcall關鍵字，參數記得反相擺放<br>
 <b>Line 19~27</b>：關閉視窗的順序為：主視窗收到WM_CLOSE事件時，呼叫DestroyWindow()，DestroyWindow()會自動將子視窗的相關資源也一併釋放掉(包含Resource描述的資源)，系統接著會發送WM_DESTROY事件給主視窗，待主視窗收到WM_DESTROY事件時，呼叫PostQuitMessage()結束視窗，值得注意的地方是，SendMessage()是屬於Block方式呼叫(必須等待動作執行完畢才返回)，而PostQuitMessage()則是Non-block方式呼叫<br>
 <b>Line 22</b>：在離開副程式時，Pacal語法是使用exit而非Assembly的ret()，如果使用ret()離開，記得要手動釋放Stack資源<br>
 <b>Line 29</b>：將處理控制權移交給下一個視窗元件</br><br>
