--- a/program.htm
+++ b/program.htm
@@ -397,38 +397,35 @@ Dialog<br>
 High Level Assembly (HLA)</h3>
 <hr size="1"><br><br><br><br><br>
 
+&lowast;
+<a href="program/hla/x86_setup.htm">
+開發環境</a><br>
+
+&lowast;
+<a href="program/hla/x86_hello.htm">
+hello, world!</a><br>
+
 &oplus;
-<b>Assembly (x86)</b><br>
+Win32 API (Original Style)<br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/hla/x86_setup.htm">
+    <a href="program/hla/win32_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/hla/x86_hello.htm">
-    hello, world!</a><br>
+    <a href="program/hla/win32_hello.htm">
+    Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Win32 API (Original Style)<br>
+    Dialog<br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/hla/win32_setup.htm">
-        開發環境</a><br>
+        <a href="program/hla/win32_dlg_window.htm">
+        Create Window</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/hla/win32_hello.htm">
-        Hello, world!</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
-        Dialog<br>
-
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/hla/win32_dlg_window.htm">
-            Create Window</a><br>
-
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/hla/win32_dlg_event.htm">
-            Handle Event</a><br>
+        <a href="program/hla/win32_dlg_event.htm">
+        Handle Event</a><br>
 
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
