--- a/program/hla/fix_flex.htm
+++ b/program/hla/fix_flex.htm
@@ -48,7 +48,7 @@
 <p><b>解決"flex: input rules are too complicated (>= 32000 NFA states)"問題</b></p>
 <hr size="1">
 <p>
-參考網站：<br>
+參考資料：<br>
 1. <a href="https://stackoverflow.com/questions/32266199/flex-input-rules-are-too-complicated-32000-nfa-states-while-compiling-hla">flex-input-rules-are-too-complicated-32000-nfa-states-while-compiling-hla</a><br><br>
 
 問題：
