--- a/program.htm
+++ b/program.htm
@@ -381,7 +381,7 @@ MASM32</h3>
 Hello, world!</a><br>
 
 &oplus;
-Dialog<br>
+<b>Dialog</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/dlg_window.htm">
