--- a/program.htm
+++ b/program.htm
@@ -417,7 +417,7 @@ hello, world!</a><br>
     Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Dialog<br>
+    <b>Dialog</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/hla/win32_dlg_window.htm">
