--- a/program.htm
+++ b/program.htm
@@ -406,7 +406,7 @@ High Level Assembly (HLA)</h3>
 hello, world!</a><br>
 
 &oplus;
-<b>Win32 API (HLA v1.0)</b><br>
+<b>Win32 API (HLA v1.x)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/hla/win32_setup.htm">
