--- a/program/hla/x86_hello.htm
+++ b/program/hla/x86_hello.htm
@@ -70,8 +70,8 @@ end main;
 $ export PATH=$PATH:/opt/hla/
 $ export hlalib=/opt/hla/hlalib/
 $ export hlainc=/opt/hla/include/
-$ hla main
-$ ./main
+$ qemu-i386 /opt/hla/hla main.hla
+$ qemu-i386 ./main
     hello, world!
 </pre><br>
 
