--- a/program/hla/x86_setup.htm
+++ b/program/hla/x86_setup.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考網站：<br>
-1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/LInuxDownload.html">HighLevelAsm</a><br><br>
+1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/dnld.html">hla</a><br><br>
 
 步驟如下：
 </p>
