--- a/program.htm
+++ b/program.htm
@@ -472,7 +472,7 @@ Flat Assembler (FASM)</h3>
     hello, world! (int 0x80)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Win32 API<br>
+    <b>Win32 API</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_setup.htm">
