--- a/program/fasm/x86_hello_printf.htm
+++ b/program/fasm/x86_hello_printf.htm
@@ -61,7 +61,7 @@ main.s
     extrn printf
  
     section ".data"
-msg: db "helo, world!", 10, 0
+msg db "helo, world!", 10, 0
 
     section ".text"
 main:
