--- a/program/fasm/arm_hello_swi_eabi.htm
+++ b/program/fasm/arm_hello_swi_eabi.htm
@@ -53,6 +53,15 @@
 2. <a href="https://github.com/kevinhooke/learning-arm-asm/blob/master/helloworld.s">helloworld</a><br>
 3. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br><br>
 
+System Call (EABI)
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
@@ -72,22 +81,16 @@ start:
     swi 0
 
     segment readable writeable
-msg: db "hello, world!", 10
+msg db "hello, world!", 10
 len = $ - msg
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>r7</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
 $ qemu-i386 /usr/local/bin/fasmarm main.s 
-$ qemu-arm ./main
+$ qemu-arm-static ./main
     hello, world!
 </pre><br>
 
