--- a/program/fasm/arm_hello_swi_oabi.htm
+++ b/program/fasm/arm_hello_swi_oabi.htm
@@ -55,7 +55,15 @@
 4. <a href="http://kerseykyle.com/articles/ARM-assembly-hello-world">ARM-assembly-hello-world</a><br>
 5. <a href="https://stackoverflow.com/questions/48183434/implementation-of-syscall-on-arm-oabi-what-is-svc-0x900071">implementation-of-syscall-on-arm-oabi-what-is-svc-0x900071</a><br><br>
 
+System Call (OABI)
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
+<tr><td>0x900001</td><td>exit</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>0x900004</td><td>write</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
 
+<p>
 main.s
 </p>
 <pre class="brush:asm">
@@ -73,22 +81,16 @@ start:
     swi 0x900001
 
     segment readable writeable
-msg: db "hello, world!", 10
+msg db "hello, world!", 10
 len = $ - msg
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>arg0(r0)</th><th>arg1(r1)</th><th>arg2(r2)</th></tr>
-<tr><td>0x900001</td><td>exit</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>0x900004</td><td>write</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
 </p>
 <pre>
-$ qemu-i386 /usr/local/bin/fasmarm main.s 
-$ qemu-arm ./main
+$ qemu-i386 /usr/local/bin/fasmarm main.s
+$ qemu-arm-static ./main
     hello, world!
 </pre><br>
 
