--- a/program/fasm/x86_hello_int80.htm
+++ b/program/fasm/x86_hello_int80.htm
@@ -53,6 +53,15 @@
 2. <a href="https://board.flatassembler.net/index.php">flatassembler</a><br>
 3. <a href="https://tldp.org/HOWTO/Assembly-HOWTO/hello.html">Assembly-HOWTO</a><br><br>
 
+System Call
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
@@ -60,7 +69,7 @@ main.s
     entry start
 
     segment readable writeable
-msg: db "hello, world!", 10
+msg db "hello, world!", 10
 len = $ - msg
 
     segment readable executable
@@ -75,12 +84,6 @@ start:
     xor ebx, ebx
     int 0x80
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
