--- a/program/fasm/win32_hello.htm
+++ b/program/fasm/win32_hello.htm
@@ -49,21 +49,45 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://flatassembler.net/index.php">fasm</a><br><br>
+1. <a href="https://board.flatassembler.net/">fasm</a><br><br>
 
 main.asm
 </p>
 <pre class="brush:asm">
-    include "c:\fasm\include\win32ax.inc"
+    format PE GUI 4.0
+    entry start
 
-    .code
+    include 'c:\fasm\include\win32a.inc'
+
+    section '.idata' import data readable writeable
+library user, 'user32.dll', kernel, 'kernel32.dll'
+
+import user,   MessageBox,  'MessageBoxA'
+import kernel, ExitProcess, 'ExitProcess'
+
+    section '.data' data readable writeable
+szCaption db 'main',0
+szContent db 'Hello, world!',0
+
+    section '.text' code readable executable
 start:
-    invoke MessageBox, NULL, "Hello, world!", "main", MB_OK
+    invoke MessageBox, NULL, szContent, szCaption, MB_OK
     invoke ExitProcess, 0
-.end start
-</pre><br>
-
+</pre>
 <p>
+<b>Line 1</b>：執行檔的格式<br>
+<b>Line 2</b>：程式的進入點<br>
+<b>Line 4</b>：Header檔案<br>
+<b>Line 6</b>：Import區段<br>
+<b>Line 7</b>：使用到的Library<br>
+<b>Line 9~10</b>：使用到的Win32 API<br>
+<b>Line 12</b>：初始化的資料區段<br>
+<b>Line 13~14</b>：初始化的Global變數，型態是byte(char)且最後一個byte是0<br>
+<b>Line 16</b>：程式區段<br>
+<b>Line 17</b>：程式的進入點<br>
+<b>Line 18</b>：顯示Message對話盒，invoke其實就是call + push的綜合指令<br>
+<b>Line 19</b>：結束Process並且釋放相關資源<br><br>
+
 Makefile
 </p>
 <pre>
