--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -87,7 +87,7 @@ end start
 <b>Line 13~14</b>：初始化的Global變數，型態是byte(char)且最後一個byte是0<br>
 <b>Line 16</b>：程式區段<br>
 <b>Line 17</b>：程式進入點<br>
-<b>Line 18</b>：顯示Message對話盒，invoke其實就是call + push的綜合指令<br>
+<b>Line 18</b>：顯示Message對話盒，invoke是一個偽指令，最終會展開成call + push的綜合指令<br>
 <b>Line 19</b>：結束Process並且釋放相關資源<br>
 <b>Line 20</b>：檔案結尾，end指令後的程式將不會被編譯<br><br>
 
