--- a/program/masm32/dlg_window.htm
+++ b/program/masm32/dlg_window.htm
@@ -104,6 +104,7 @@ end start
 </pre>
 <p>
 <b>Line 18~33</b>：proc、endp用來定義Procedure的區間<br>
+<b>Line 19</b>：Local變數宣告方式<br>
 <b>Line 21~22</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
 <b>Line 24</b>：暫時性的Label，不需要指定名稱，適合小範圍的應用，但需要搭配@f、@b使用<br>
 <b>Line 25</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
