FASM How to program a simple window.

--- a/program.htm
+++ b/program.htm
@@ -481,6 +481,14 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_hello.htm">
         Hello, world!</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Dialog</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_dlg_window.htm">
+            Create Window</a><br>
+
 <br><br><br><br>
 
 <div id="nasm"></div>
