FASM How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -489,6 +489,9 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_dlg_window.htm">
             Create Window</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_dlg_event.htm">
+            Handle Event</a><br>
 <br><br><br><br>
 
 <div id="nasm"></div>
