--- a/program/nasm/x64_hello_printf.htm
+++ b/program/nasm/x64_hello_printf.htm
@@ -58,7 +58,7 @@ main.s
     extern printf
   
     section .data
-msg: db "hello, world!", 10, 0
+msg db "hello, world!", 10, 0
   
     section .text
 main:
