--- a/program/nasm/x86_argc.htm
+++ b/program/nasm/x86_argc.htm
@@ -58,7 +58,7 @@ main.s
     extern printf
  
     section .data
-fmt: db "argc:%d, argv[0]:%s, argv[1]:%s", 10, 0
+fmt db "argc:%d, argv[0]:%s, argv[1]:%s", 10, 0
  
     section .text
 main:
