--- a/program/nasm/x64_hello_int80.htm
+++ b/program/nasm/x64_hello_int80.htm
@@ -51,14 +51,23 @@
 參考資訊：<br>
 1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br><br>
 
+System Call
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rbx)</th><th>arg1(rcx)</th><th>arg2(rdx)</th></tr>
+<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
     global _start
 
     section .data
-msg: db "hello, world!", 10
-len: equ $ - msg
+msg db "hello, world!", 10
+len equ $ - msg
 
     section .text
 _start:
@@ -72,12 +81,6 @@ _start:
     mov rbx, 0
     int 0x80
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rbx)</th><th>arg1(rcx)</th><th>arg2(rdx)</th></tr>
-<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
-</table><br>
 
 <p>
 編譯、執行
