--- a/program/nasm/x64_hello_syscall.htm
+++ b/program/nasm/x64_hello_syscall.htm
@@ -52,14 +52,23 @@
 1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
+System Call
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rdi)</th><th>arg1(rsi)</th><th>arg2(rdx)</th></tr>
+<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
     global _start
 
     section .data
-msg: db "hello, world!", 10
-len: equ $ - msg
+msg db "hello, world!", 10
+len equ $ - msg
 
     section .text
 _start:
@@ -73,12 +82,6 @@ _start:
     xor rdi, rdi
     syscall
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rdi)</th><th>arg1(rsi)</th><th>arg2(rdx)</th></tr>
-<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
-</table><br>
 
 <p>
 編譯、執行
