--- a/program/nasm/x86_hello_gs.htm
+++ b/program/nasm/x86_hello_gs.htm
@@ -53,14 +53,23 @@
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br>
 3. <a href="https://stackoverflow.com/questions/41690592/what-does-gs0x10-do-in-assembler">what-does-gs0x10-do-in-assembler</a><br><br>
 
+System Call
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
     global main
   
     section .data
-msg: db "hello, world!", 10
-len: equ $ - msg
+msg db "hello, world!", 10
+len equ $ - msg
   
     section .text
 main:
@@ -74,12 +83,6 @@ main:
     mov ebx, 0
     call [gs:0x10]
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
