--- a/program/nasm/x86_hello_sysenter.htm
+++ b/program/nasm/x86_hello_sysenter.htm
@@ -52,14 +52,23 @@
 1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
 2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br><br>
 
+System Call
+</p>
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
 main.s
 </p>
 <pre class="brush:asm">
     global _start
    
     section .data
-msg: db 'hello, world!', 10
-len: equ $ - msg
+msg db 'hello, world!', 10
+len equ $ - msg
    
     section .text
 _start:
@@ -87,12 +96,6 @@ ret:
     mov ebp, esp
     sysenter
 </pre><br>
-
-<table>
-<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
-<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
-<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
-</table><br>
 
 <p>
 編譯、執行
