--- a/program/nasm/win32_hello.htm
+++ b/program/nasm/win32_hello.htm
@@ -73,8 +73,8 @@ _user32   db '/defaultlib:c:\\masm32\\lib\\user32.lib '
 _kernel32 db '/defaultlib:c:\\masm32\\lib\\kernel32.lib '
 
     segment .data use32
-szCaption db "main",0
-szContent db "Hello, world",0
+szCaption db 'main',0
+szContent db 'Hello, world',0
 
     segment .text use32
 _start:
