--- a/program/nasm/win32_hello.htm
+++ b/program/nasm/win32_hello.htm
@@ -67,14 +67,14 @@ main.asm
     %define ExitProcess _ExitProcess@4
 
     section .drectve info
-_entry    db '/entry:start '
-_gdi32    db '/defaultlib:c:\\masm32\\lib\\gdi32.lib '
-_user32   db '/defaultlib:c:\\masm32\\lib\\user32.lib '
-_kernel32 db '/defaultlib:c:\\masm32\\lib\\kernel32.lib '
+_entry    db "/entry:start "
+_gdi32    db "/defaultlib:c:\\masm32\\lib\\gdi32.lib "
+_user32   db "/defaultlib:c:\\masm32\\lib\\user32.lib "
+_kernel32 db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
 
     segment .data use32
-szCaption db 'main',0
-szContent db 'Hello, world',0
+szCaption db "main",0
+szContent db "Hello, world",0
 
     segment .text use32
 _start:
