--- a/program/nasm/x86_hello_sysenter.htm
+++ b/program/nasm/x86_hello_sysenter.htm
@@ -67,7 +67,7 @@ main.s
     global _start
    
     section .data
-msg db 'hello, world!', 10
+msg db "hello, world!", 10
 len equ $ - msg
    
     section .text
