--- a/program/fasm/win32_dlg_window.htm
+++ b/program/fasm/win32_dlg_window.htm
@@ -59,28 +59,28 @@ main.asm
     format PE GUI 4.0
     entry start
  
-    include 'c:\fasm\include\win32a.inc'
+    include "c:\fasm\include\win32a.inc"
 
-    section '.idata' import data readable writeable
-library user, 'user32.dll', kernel, 'kernel32.dll'
+    section ".idata" import data readable writeable
+library user, "user32.dll", kernel, "kernel32.dll"
  
 import user, \
-    MessageBox,      'MessageBoxA', \
-    GetMessage,      'GetMessageA', \
-    CreateWindowEx,  'CreateWindowExA', \
-    DispatchMessage, 'DispatchMessageA'
+    MessageBox,      "MessageBoxA", \
+    GetMessage,      "GetMessageA", \
+    CreateWindowEx,  "CreateWindowExA", \
+    DispatchMessage, "DispatchMessageA"
 
 import kernel, \
-    ExitProcess,     'ExitProcess', \
-    GetCommandLine,  'GetCommandLineA', \
-    GetModuleHandle, 'GetModuleHandleA'
+    ExitProcess,     "ExitProcess", \
+    GetCommandLine,  "GetCommandLineA", \
+    GetModuleHandle, "GetModuleHandleA"
  
-    section '.data' data readable writeable
-szCaption   db  'main',0
+    section ".data" data readable writeable
+szCaption   db  "main",0
 CommandLine dd  0
 hInstance   dd  0
  
-    section '.text' code readable executable
+    section ".text" code readable executable
 proc WinMain hInst, hPrevInst, CmdLine, CmdShow
     local msg:MSG
 
