--- a/program/fasm/win32_hello.htm
+++ b/program/fasm/win32_hello.htm
@@ -57,19 +57,19 @@ main.asm
     format PE GUI 4.0
     entry start
 
-    include 'c:\fasm\include\win32a.inc'
+    include "c:\fasm\include\win32a.inc"
 
-    section '.idata' import data readable writeable
-library user, 'user32.dll', kernel, 'kernel32.dll'
+    section ".idata" import data readable writeable
+library user, "user32.dll", kernel, "kernel32.dll"
 
-import user,   MessageBox,  'MessageBoxA'
-import kernel, ExitProcess, 'ExitProcess'
+import user,   MessageBox,  "MessageBoxA"
+import kernel, ExitProcess, "ExitProcess"
 
-    section '.data' data readable writeable
-szCaption db 'main',0
-szContent db 'Hello, world!',0
+    section ".data" data readable writeable
+szCaption db "main",0
+szContent db "Hello, world!",0
 
-    section '.text' code readable executable
+    section ".text" code readable executable
 start:
     invoke MessageBox, NULL, szContent, szCaption, MB_OK
     invoke ExitProcess, 0
