--- a/program/fasm/win32_dlg_event.htm
+++ b/program/fasm/win32_dlg_event.htm
@@ -59,34 +59,34 @@ main.asm
     format PE GUI 4.0
     entry start
  
-    include 'c:\fasm\include\win32a.inc'
+    include "c:\fasm\include\win32a.inc"
 
-    section '.idata' import data readable writeable
-library user, 'user32.dll', kernel, 'kernel32.dll'
+    section ".idata" import data readable writeable
+library user, "user32.dll", kernel, "kernel32.dll"
  
 import user, \
-    MessageBox,      'MessageBoxA', \
-    GetMessage,      'GetMessageA', \
-    DestroyWindow,   'DestroyWindow', \
-    SetWindowLong,   'SetWindowLongA', \
-    CreateWindowEx,  'CreateWindowExA', \
-    CallWindowProc,  'CallWindowProcA', \
-    DispatchMessage, 'DispatchMessageA', \
-    PostQuitMessage, 'PostQuitMessage'
+    MessageBox,      "MessageBoxA", \
+    GetMessage,      "GetMessageA", \
+    DestroyWindow,   "DestroyWindow", \
+    SetWindowLong,   "SetWindowLongA", \
+    CreateWindowEx,  "CreateWindowExA", \
+    CallWindowProc,  "CallWindowProcA", \
+    DispatchMessage, "DispatchMessageA", \
+    PostQuitMessage, "PostQuitMessage"
 
 import kernel, \
-    ExitProcess,     'ExitProcess', \
-    GetCommandLine,  'GetCommandLineA', \
-    GetModuleHandle, 'GetModuleHandleA'
+    ExitProcess,     "ExitProcess", \
+    GetCommandLine,  "GetCommandLineA", \
+    GetModuleHandle, "GetModuleHandleA"
  
-    section '.data' data readable writeable
+    section ".data" data readable writeable
 hWin        dd 0
 szCaption   db "main",0
 hInstance   dd 0
 CommandLine dd 0
 defWndProc  dd 0
 
-    section '.text' code readable executable
+    section ".text" code readable executable
 proc WndProc hWnd, uMsg, wParam, lParam
     mov eax, [uMsg]
     cmp eax, WM_CLOSE
