NASMX How to prepare development environment.

--- a/program.htm
+++ b/program.htm
@@ -435,6 +435,13 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_hello.htm">
         Hello, world!</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Win32 API (NASMX)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32x_setup.htm">
+        開發環境</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
