NASMX How to create window.

--- a/program.htm
+++ b/program.htm
@@ -446,6 +446,13 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32x_hello.htm">
         Hello, world!</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Dialog</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_dlg_window.htm">
+            Create Window</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
