NASMX How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -453,6 +453,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_dlg_window.htm">
             Create Window</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_dlg_event.htm">
+            Handle Event</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
