--- a/program/nasm/win32x_dlg_window.htm
+++ b/program/nasm/win32x_dlg_window.htm
@@ -96,7 +96,7 @@ proc WinMain, dword hInst, dword hPrevInst, dword CmdLine, dword CmdShow
     mov eax, dword [msg + MSG.wParam]
 endproc
 
-proc start, ptrdiff_t argc, ptrdiff_t argv
+proc start, dword argc, dword argv
     locals none
 
     invoke GetModuleHandle, NULL
