--- a/program/nasm/win32x_hello.htm
+++ b/program/nasm/win32x_hello.htm
@@ -69,7 +69,7 @@ szCaption declare(NASMX_TCHAR) NASMX_TEXT("main"),0
 szContent declare(NASMX_TCHAR) NASMX_TEXT("Hello, world!"),0
 
     section .text use32
-proc start, ptrdiff_t argc, ptrdiff_t argv
+proc start, dword argc, dword argv
     locals none
 
     invoke MessageBox, NULL, szContent, szCaption, MB_OK
