Kubernetes Added readme for some commands.

--- a/system.htm
+++ b/system.htm
@@ -491,6 +491,10 @@ Kubernetes</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="system/kube/cli.htm">
+常見操作指令</a><br>
+
+&lowast;
 <a href="system/kube/install_ubuntu.htm">
 如何安裝在Ubuntu系統上(VMware)</a><br>
 
