--- a/program.htm
+++ b/program.htm
@@ -435,6 +435,13 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_hello.htm">
         Hello, world!</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Dialog</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_dlg_window.htm">
+            Create Window</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
