--- a/program/nasm/win32_dlg_window.htm
+++ b/program/nasm/win32_dlg_window.htm
@@ -95,7 +95,7 @@ main.asm
     WC_DIALOG           equ 8002h
     SW_SHOWNORMAL       equ 1h
     WS_OVERLAPPED       equ 0h
-    WS_CAPTION          equ 0C00000h
+    WS_CAPTION          equ 0c00000h
     WS_SYSMENU          equ 80000h
     WS_THICKFRAME       equ 40000h
     WS_MINIMIZEBOX      equ 20000h
@@ -144,8 +144,8 @@ WinMain:
     push dword 0
     push dword WS_OVERLAPPEDWINDOW | WS_VISIBLE
     push szCaption
-    push WC_DIALOG
-    push WS_EX_LEFT
+    push dword WC_DIALOG
+    push dword WS_EX_LEFT
     call CreateWindowEx
 
 .loop:
