--- a/program/nasm/win32_setup.htm
+++ b/program/nasm/win32_setup.htm
@@ -69,15 +69,12 @@ DPI設定成144<br>
 接着使用司徒已經解開的檔案
 </p>
 <pre>
-$ sudo apt-get install nasm -y
-
 $ cd
 $ git clone https://github.com/steward-fu/win32
+$ cp -a win32/nasm /home/user/.wine_amd64/drive_c/
 $ cp -a win32/masm32 /home/user/.wine_amd64/drive_c/
-</pre>
+</pre><br>
 <p>
-P.S. nasm可以直接在Linux系統上執行且可以直接產出Win32 Object檔案，因此，這部分不需要使用Wine執行<br><br>
-
 接着測試是否可以正常執行程式
 </p>
 <pre>
