NASM How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -75,8 +75,8 @@
 <br><br>
 <p>
     <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
-    <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
     <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)"/></a>
+    <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
     <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="High Level Assembly(HLA)"/></a>
     <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
     <a href="#wine"><img src="img/photos/wine.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wine"/></a>
@@ -367,31 +367,6 @@ int 0x80、sysenter、syscall</a><br>
 解決"undefined reference to __gmpn_invert_limb"問題</a>
 <br><br><br><br>
 
-<div id="masm32"></div>
-<h3><img src="img/photos/masm32.jpg" class="floatLeft"/>
-MASM32</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="program/masm32/setup.htm">
-開發環境</a><br>
-
-&lowast;
-<a href="program/masm32/hello.htm">
-Hello, world!</a><br>
-
-&oplus;
-<b>Dialog</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/dlg_window.htm">
-    Create Window</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/dlg_event.htm">
-    Handle Event</a><br>
-<br><br><br><br>
-
 <div id="nasm"></div>
 <h3><img src="img/photos/nasm.jpg" class="floatLeft"/>
 Netwide Assembler (NASM)</h3>
@@ -441,6 +416,10 @@ Netwide Assembler (NASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/nasm/win32_dlg_window.htm">
             Create Window</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_dlg_event.htm">
+            Handle Event</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
@@ -494,6 +473,31 @@ Netwide Assembler (NASM)</h3>
 &lowast;
 <a href="program/nasm/fix_start-group.htm">
 解決"undefined reference to dl_iterate_phdr"問題</a><br>
+<br><br><br><br>
+
+<div id="masm32"></div>
+<h3><img src="img/photos/masm32.jpg" class="floatLeft"/>
+MASM32</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="program/masm32/setup.htm">
+開發環境</a><br>
+
+&lowast;
+<a href="program/masm32/hello.htm">
+Hello, world!</a><br>
+
+&oplus;
+<b>Dialog</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/dlg_window.htm">
+    Create Window</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/dlg_event.htm">
+    Handle Event</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
