--- a/program/nasm/win32_dlg_window.htm
+++ b/program/nasm/win32_dlg_window.htm
@@ -195,22 +195,22 @@ _start:
 Makefile
 </p>
 <pre>
-export WINEPREFIX=/home/steward/.wine
+export WINEPREFIX=/home/user/.wine_amd64
 
 TARGET=main
-MYWINE=wine
-NASM32=/home/steward/.wine/drive_c/nasm
-MASM32=/home/steward/.wine/drive_c/masm32
+MYWINE=box86 wine
+NASM32=/home/user/.wine_amd64/drive_c/nasm
+MASM32=/home/user/.wine_amd64/drive_c/masm32
 
 all:
-	${MYWINE} ${NASM32}/bin/nasm.exe -fwin32 ${TARGET}.asm
-	${MYWINE} ${MASM32}/bin/link.exe /SUBSYSTEM:WINDOWS /MERGE:.rdata=.text ${TARGET}.obj
+    ${MYWINE} ${NASM32}/bin/nasm.exe -fwin32 ${TARGET}.asm
+    ${MYWINE} ${MASM32}/bin/link.exe /SUBSYSTEM:WINDOWS /MERGE:.rdata=.text ${TARGET}.obj
 
 run:
-	${MYWINE} ${TARGET}.exe
+    ${MYWINE} ${TARGET}.exe
 
 clean:
-	rm -rf ${TARGET}.exe ${TARGET}.obj
+    rm -rf ${TARGET}.exe ${TARGET}.obj
 </pre><br>
 
 <p>
