--- a/program/nasm/win32_hello.htm
+++ b/program/nasm/win32_hello.htm
@@ -103,12 +103,12 @@ _start:
 Makefile
 </p>
 <pre>
-export WINEPREFIX=/home/steward/.wine
+export WINEPREFIX=/home/user/.wine_amd64
 
 TARGET=main
-MYWINE=wine
-NASM32=/home/steward/.wine/drive_c/nasm
-MASM32=/home/steward/.wine/drive_c/masm32
+MYWINE=box86 wine
+NASM32=/home/user/.wine_amd64/drive_c/nasm
+MASM32=/home/user/.wine_amd64/drive_c/masm32
 
 all:
 	${MYWINE} ${NASM32}/bin/nasm.exe -fwin32 ${TARGET}.asm
