--- a/program/wine/arm64_hello.htm
+++ b/program/wine/arm64_hello.htm
@@ -52,6 +52,8 @@
 1. <a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">msdn</a><br>
 2. <a href="http://www.winprog.org/tutorial/start.html">start</a><br><br>
 
+經典的<b>Hello, world!</b>程式框架總是能夠讓人細心品味一款程式語言的美好，司徒就使用一個簡單的Message對話盒來展現<b>Hello, world!</b>框架<br><br>
+
 main.s
 </p>
 <pre class="brush:asm">
@@ -60,16 +62,16 @@ main.s
     .extern ExitProcess
  
     .data
-title: .asciz "main"
-content: .asciz "Hello, world!"
+szCaption: .asciz "main"
+szContent: .asciz "Hello, world!"
  
     .text
 WinMain:
     stp x29, x30, [sp, #-0x10]!
  
     mov x0, 0
-    ldr x1, =content
-    ldr x2, =title
+    ldr x1, =szContent
+    ldr x2, =szCaption
     mov x3, 0
     bl MessageBoxA
 
@@ -79,9 +81,15 @@ WinMain:
     mov x0, 0
     ldp x29, x30, [sp], #0x10
     ret
-</pre><br>
-
+</pre>
 <p>
+<b>Line 1</b>：程式進入點<br>
+<b>Line 2~3</b>：external function<br>
+<b>Line 5</b>：初始化的資料區段<br>
+<b>Line 6~7</b>：初始化的Global變數，型態是byte(char)且最後一個byte是0<br>
+<b>Line 13~17</b>：顯示Message對話盒<br>
+<b>Line 19~20</b>：結束Process並且釋放相關資源<br><br>
+
 編譯、執行
 </p>
 <pre>
