--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -52,13 +52,14 @@
 1. <a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">msdn</a><br>
 2. <a href="http://www.winprog.org/tutorial/start.html">start</a><br><br>
 
+經典的<b>Hello, world!</b>程式框架總是能夠讓人細心品味一款程式語言的美好，司徒就使用一個簡單的Message對話盒來展現<b>Hello, world!</b>框架<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;windows.h&gt;
 
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
-                   LPSTR lpCmdLine, int nCmdShow)
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
     MessageBox(NULL, "Hello, world!", "main", MB_OK);
     ExitProcess(0);
