--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -65,9 +65,13 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
     ExitProcess(0);
     return 0;
 }
-</pre><br>
-
+</pre>
 <p>
+<b>Line 1</b>：Header檔案<br>
+<b>Line 3</b>：程式進入點，WINAPI就是__stdcall的意思，代表Calling Convention是__stdcall<br>
+<b>Line 5</b>：顯示Message對話盒<br>
+<b>Line 6</b>：結束Process並且釋放相關資源<br><br>
+
 編譯、執行
 </p>
 <pre>
