--- a/program.htm
+++ b/program.htm
@@ -634,7 +634,7 @@ Wine</h3>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_window.htm">
-            Window</a><br>
+            Create Window</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_event.htm">
