--- a/program/wine/cpp_dlg_window.htm
+++ b/program/wine/cpp_dlg_window.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Window</b></p>
+<p><b>Create Window</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -62,11 +62,10 @@ main.c
 <pre class="brush:cpp">
 #include &lt;windows.h&gt;
 
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
-                   LPSTR lpCmdLine, int nCmdShow)
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
-    CreateWindow(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 
-                  300, 300, NULL, NULL, NULL, NULL);
+    CreateWindow(WC_DIALOG, "main", 
+        WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL);
 
     MSG msg = {0};
     while (GetMessage(&amp;msg, NULL, 0, 0)) {
@@ -77,9 +76,9 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
 }
 </pre>
 <p>
-<b>Line 6</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
-<b>Line 10</b>：從Queue提取Message(包含視窗、系統事件)<br>
-<b>Line 11</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br><br>
+<b>Line 5~6</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
+<b>Line 9</b>：從Queue提取Message(包含視窗、系統事件)<br>
+<b>Line 10</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br><br>
 
 編譯、執行
 </p>
@@ -88,30 +87,7 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_window/1.jpg" class="maxSize"><br><br>
-
-如果連預設的視窗訊息都不處理，如下程式：
-</p>
-<pre class="brush:cpp">
-#include &lt;windows.h&gt;
-
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
-                   LPSTR lpCmdLine, int nCmdShow)
-{
-    CreateWindow(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 
-                  300, 300, NULL, NULL, NULL, NULL);
-
-    while (1) {
-        Sleep(1000);
-    }
-    ExitProcess(0);
-    return 0;
-}
-</pre><br>
-
-<p>
-視窗將無法得到適當的處理，導致顯示有問題<br>
-<img style="border:0px" src="cpp_dlg_window/2.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
