--- a/program.htm
+++ b/program.htm
@@ -638,7 +638,7 @@ Wine</h3>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_event.htm">
-            Event</a><br>
+            Handle Event</a><br>
             
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_keyboard.htm">
