--- a/driver/ldd/boot_logo.htm
+++ b/driver/ldd/boot_logo.htm
@@ -72,7 +72,7 @@ const struct linux_logo * __init_refok fb_find_logo(int depth)
 {
   ...
   #ifdef CONFIG_LOGO_XXX_CLUT224
-    logo = &logo_xxx_clut224;
+    logo = &amp;logo_xxx_clut224;
   #endif
   ...
 }
