Replaced spaces with tab.

--- a/mcu/stc15w4k56s4/epaper_1.htm
+++ b/mcu/stc15w4k56s4/epaper_1.htm
@@ -620,14 +620,14 @@ Makefile
 </p>
 <pre>
 all:
-  sdcc main.c
-  packihx main.ihx > main.hex
+	sdcc main.c
+	packihx main.ihx &gt; main.hex
 
 flash:
-  sudo stcgal -p /dev/ttyO2 -P stc15 -o clock_source=external main.hex
+	sudo stcgal -p /dev/ttyO2 -P stc15 -o clock_source=external main.hex
 
 clean:
-  rm -rf main.ihx main.lst main.mem main.rst main.lk main.map main.rel main.sym main.hex
+	rm -rf main.ihx main.lst main.mem main.rst main.lk main.map main.rel main.sym main.hex
 </pre><br>
 
 <p>
