--- a/mcu/at91sam7s64/asm_led.htm
+++ b/mcu/at91sam7s64/asm_led.htm
@@ -143,15 +143,15 @@ Makefile
 all: main.bin
 
 main.o: main.s
-  arm-none-eabi-as main.s -o main.o
+	arm-none-eabi-as main.s -o main.o
 
 main.bin: main.o main.ld
-  arm-none-eabi-ld main.o -T main.ld -o main.elf
-  arm-none-eabi-objdump -D main.elf > main.list
-  arm-none-eabi-objcopy main.elf main.bin -O binary
+	arm-none-eabi-ld main.o -T main.ld -o main.elf
+	arm-none-eabi-objdump -D main.elf &gt; main.list
+	arm-none-eabi-objcopy main.elf main.bin -O binary
 
 clean:
-  rm -f *.bin *.o *.elf *.list
+	rm -f *.bin *.o *.elf *.list
 </pre><br>
 
 <p>
