--- a/mcu/lpc2103/asm_led.htm
+++ b/mcu/lpc2103/asm_led.htm
@@ -141,16 +141,16 @@ Makefile
 </p>
 <pre>
 all:
-  arm-none-eabi-as -ggdb -mcpu=arm7 -o main.o main.s
-  arm-none-eabi-ld -T main.ld -o main.elf main.o
-  arm-none-eabi-objcopy -O ihex main.elf main.ihx
-  packihx main.ihx > main.hex
+	arm-none-eabi-as -ggdb -mcpu=arm7 -o main.o main.s
+	arm-none-eabi-ld -T main.ld -o main.elf main.o
+	arm-none-eabi-objcopy -O ihex main.elf main.ihx
+	packihx main.ihx &gt; main.hex
 
 flash:
-  sudo lpc21isp -wipe -control  -verify -debug2 ./main.hex /dev/ttyUSB0 9600 12000
+	sudo lpc21isp -wipe -control  -verify -debug2 ./main.hex /dev/ttyUSB0 9600 12000
 
 clean:
-  rm -rf main.ihx main.hex main.o main.elf
+	rm -rf main.ihx main.hex main.o main.elf
 </pre><br>
 
 <p>
