Replaced spaces with tab.

--- a/phone/gemini/android/termux/stm8s103.htm
+++ b/phone/gemini/android/termux/stm8s103.htm
@@ -99,10 +99,10 @@ OBJECTS=main.ihx
 all: $(OBJECTS)
 
 clean:
-  rm -f $(OBJECTS)
+	rm -f $(OBJECTS)
 
 %.ihx: %.c
-  $(SDCC) -lstm8 -mstm8 --out-fmt-ihx $(CFLAGS) $(LDFLAGS) $<
+	$(SDCC) -lstm8 -mstm8 --out-fmt-ihx $(CFLAGS) $(LDFLAGS) $&lt;
 </pre><br>
 
 <p>
